update profile and adding blog article

--- a/index.html
+++ b/index.html
@@ -2,59 +2,82 @@
 <!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
 <!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<head>
+		<meta charset="utf-8">
+  		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="js/jquery.min.js"></script>
+		<script src="js/jquery.poptrox.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/init.js"></script>
 
-  <title>sanakdam</title>
-  <meta name="description" content="Peserta Besut Kode Universitas">
+		<title>sanakdam</title>
+  		<meta name="description" content="Peserta Besut Kode Universitas">
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  		<meta name="viewport" content="width=device-width,initial-scale=1">
 
-</head>
+		<noscript>
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-xlarge.css" />
+		</noscript>
+		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+	</head>
+	<body id="top">
 
-<body>
+		<!-- Header -->
+			<header id="header">
+				<a href="https://github.com/sanAkdam" class="image avatar"><img src="images/avatar.png" alt="" /></a>
+				<h1><strong>I am San</strong>, a student <br /> at the Brawijaya University<br />
+				<i>I am a web developer and designer. There are currently migrating from PHP to Go</i></h1>
+			</header>
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">sanakdam</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">Peserta Besut Kode Universitas</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/sanAkdam" class="code">View sanakdam on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <p><a href="https://www.hackerrank.com/san_akdam">HackerRank</a> | <a href="http://stackoverflow.com/users/7040935/san-sayidul-akdam-augusta">StackOverFlow</a> | <a href="https://github.com/sanAkdam">Github</a> | Project Euler : sanakdam</p>
-        </article>
-      </div>
-    </div>
-    <footer>
-      <div class="owner">
+		<!-- Main -->
+			<div id="main">
+				<!-- One -->
+					<section id="one">
+						<header class="major">
+							<h2>Pulau Madura</h2>
+						</header>
+						<p>
+							<strong>Madura</strong> adalah nama pulau yang terletak di sebelah timur laut Jawa Timur. 
+							Pulau Madura besarnya kurang lebih 5.168 km2 (lebih kecil daripada pulau Bali), dengan penduduk hampir 4 juta jiwa.
+						</p>	
+						<p>	
+							Jembatan Nasional Suramadu merupakan pintu masuk utama menuju Madura, selain itu untuk menuju pulau ini bisa dilalui dari jalur laut ataupun melalui jalur udara. 
+							Untuk jalur laut, bisa dilalui dari Pelabuhan Tanjung Perak di Surabaya menuju Pelabuhan Kamal di bangkalan, Selain itu juga bisa dilalui dari Pelabuhan Jangkar Situbondo menuju Pelabuhan Kalianget di Sumenep, ujung timur Madura.
+						</p>
+						<p>
+							Pulau Madura bentuknya seakan mirip badan sapi, terdiri dari empat Kabupaten, yaitu : Bangkalan, Sampang, Pamekasan dan Sumenep. 
+							Madura, Pulau dengan sejarahnya yang panjang, tercermin dari budaya dan keseniannya dengan pengaruh islamnya yang kuat.
+						</p>
+						<p>
+							Pulau Madura didiami oleh suku Madura yang merupakan salah satu etnis suku dengan populasi besar di Indonesia, jumlahnya sekitar 20 juta jiwa. 
+							Mereka berasal dari pulau Madura dan pulau-pulau sekitarnya, seperti Gili Raja, Sapudi, Raas, dan Kangean. 
+							Selain itu, orang Madura banyak tinggal di bagian timur Jawa Timur biasa disebut wilayah Tapal Kuda, dari Pasuruan sampai utara Banyuwangi. 
+							Orang Madura yang berada di Situbondo dan Bondowoso, serta timur Probolinggo, Jember, jumlahnya paling banyak dan jarang yang bisa berbahasa Jawa, juga termasuk Surabaya Utara ,serta sebagian Malang.
+						</p>
+						<p>
+							Suku Madura terkenal karena gaya bicaranya yang blak-blakan, masyarakat Madura juga dikenal hemat, disiplin, dan rajin bekerja keras (abhantal omba' asapo' angen). 
+							Harga diri, juga paling penting dalam kehidupan masyarakat Madura, mereka memiliki sebuah falsafah: katembheng pote mata, angok pote tolang. 
+							Sifat yang seperti inilah yang melahirkan tradisi carok pada sebagian masyarakat Madura.
+						</p>
+					</section>
+			</div>
 
-      <p><a href="https://github.com/sanAkdam" class="avatar"><img src="https://avatars2.githubusercontent.com/u/15798147?v=3&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/sanAkdam">sanAkdam</a> on <a href="https://www.github.com">GitHub</a></p>
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/sanAkdam/sanakdam.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/sanAkdam/sanakdam.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+		<!-- Footer -->
+			<footer id="footer">
+				<ul class="icons">
+					<li><a href="https://github.com/sanAkdam" class="icon fa-github"><span class="label">Github</span></a></li>
+					<li><a href="https://www.facebook.com/akdamerror?ref=bookmarks" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.linkedin.com/in/san-sayidul-akdam-augusta-810933108?trk=nav_responsive_tab_profile_pic" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="mailto:san.akdam@gmail.com?subject=The%20subject%20of%20the%20mail" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="more">
+					<li><a href="https://www.hackerrank.com/san_akdam">HackerRank</a></li><li><a href="http://stackoverflow.com/users/7040935/san-sayidul-akdam-augusta">StackOverFlow</a></li>
+				</ul>
+			</footer>
+	</body>
 </html>
