update content of blog post

--- a/index.html
+++ b/index.html
@@ -39,31 +39,11 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Pulau Madura</h2>
+							<h2>Newbie First Post</h2>
 						</header>
-						<p>
-							<strong>Madura</strong> adalah nama pulau yang terletak di sebelah timur laut Jawa Timur. 
-							Pulau Madura besarnya kurang lebih 5.168 km2 (lebih kecil daripada pulau Bali), dengan penduduk hampir 4 juta jiwa.
-						</p>	
-						<p>	
-							Jembatan Nasional Suramadu merupakan pintu masuk utama menuju Madura, selain itu untuk menuju pulau ini bisa dilalui dari jalur laut ataupun melalui jalur udara. 
-							Untuk jalur laut, bisa dilalui dari Pelabuhan Tanjung Perak di Surabaya menuju Pelabuhan Kamal di bangkalan, Selain itu juga bisa dilalui dari Pelabuhan Jangkar Situbondo menuju Pelabuhan Kalianget di Sumenep, ujung timur Madura.
-						</p>
-						<p>
-							Pulau Madura bentuknya seakan mirip badan sapi, terdiri dari empat Kabupaten, yaitu : Bangkalan, Sampang, Pamekasan dan Sumenep. 
-							Madura, Pulau dengan sejarahnya yang panjang, tercermin dari budaya dan keseniannya dengan pengaruh islamnya yang kuat.
-						</p>
-						<p>
-							Pulau Madura didiami oleh suku Madura yang merupakan salah satu etnis suku dengan populasi besar di Indonesia, jumlahnya sekitar 20 juta jiwa. 
-							Mereka berasal dari pulau Madura dan pulau-pulau sekitarnya, seperti Gili Raja, Sapudi, Raas, dan Kangean. 
-							Selain itu, orang Madura banyak tinggal di bagian timur Jawa Timur biasa disebut wilayah Tapal Kuda, dari Pasuruan sampai utara Banyuwangi. 
-							Orang Madura yang berada di Situbondo dan Bondowoso, serta timur Probolinggo, Jember, jumlahnya paling banyak dan jarang yang bisa berbahasa Jawa, juga termasuk Surabaya Utara ,serta sebagian Malang.
-						</p>
-						<p>
-							Suku Madura terkenal karena gaya bicaranya yang blak-blakan, masyarakat Madura juga dikenal hemat, disiplin, dan rajin bekerja keras (abhantal omba' asapo' angen). 
-							Harga diri, juga paling penting dalam kehidupan masyarakat Madura, mereka memiliki sebuah falsafah: katembheng pote mata, angok pote tolang. 
-							Sifat yang seperti inilah yang melahirkan tradisi carok pada sebagian masyarakat Madura.
-						</p>
+						<h3>
+							Hello, this is my first blog post on Github Pages. Previously I've never written in a blog post and do not know Github provides features like this. but since I participated in the Besut Kode Universitas I broke the record for the first time do Pull Requests and use this Github Page.
+						</h3>
 					</section>
 			</div>
 
