--- a/index.html
+++ b/index.html
@@ -45,6 +45,19 @@
 							Hello, this is my first blog post on Github Pages. Previously I've never written in a blog post and do not know Github provides features like this. but since I participated in the Besut Kode Universitas I broke the record for the first time do Pull Requests and use this Github Page.
 						</h3>
 					</section>
+				<!-- Two -->
+					<section id="two">
+						<header class="major">
+							<h2>Never git init your repo</h2>
+						</header>
+						<h3>
+							The first commit of a repository can not be rebased like regular commits, so it’s good practice to create an empty commit as your repository root. So you should run <code>git commit -m “root” --allow-empty'</code> right after init your repository. This creates an empty root commit in one quick step. But that's hard to remember, right? Run this in your terminal
+							<code>
+								$ git config --global alias.it '!git init && git commit -m “root” --allow-empty'
+							</code>
+							And next time you init a new repo, <strong>don't git init!</strong>, <strong>git it!!!</strong>
+						</h3>
+					</section>
 			</div>
 
 		<!-- Footer -->
