--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 							<h2>Never git init your repo</h2>
 						</header>
 						<h3>
-							The first commit of a repository can not be rebased like regular commits, so it’s good practice to create an empty commit as your repository root. So you should run <code>git commit -m “root” --allow-empty'</code> right after init your repository. This creates an empty root commit in one quick step. But that's hard to remember, right? Run this in your terminal
+							The first commit of a repository can not be rebased like regular commits, so it’s good practice to create an empty commit as your repository root. So you should run <code>git commit -m “root” --allow-empty'</code> right after init your repository. This creates an empty root commit in one quick step. But that's hard to remember, right? Run this in your terminal<br />
 							<code>
 								$ git config --global alias.it '!git init && git commit -m “root” --allow-empty'
-							</code>
+							</code><br />
 							And next time you init a new repo, <strong>don't git init!</strong>, <strong>git it!!!</strong>
 						</h3>
 					</section>
