add link to each page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Newbie First Post</h2>
+							<a href="newbie-first-post.html"><h2>Newbie First Post</h2></a>
 						</header>
 						<h3>
 							Hello, this is my first blog post on Github Pages. Previously I've never written in a blog post and do not know Github provides features like this. but since I participated in the Besut Kode Universitas I broke the record for the first time do Pull Requests and use this Github Page.
@@ -48,7 +48,7 @@
 				<!-- Two -->
 					<section id="two">
 						<header class="major">
-							<h2>Never git init your repo</h2>
+							<a href="dont-git-init-your-repo.html"><h2>Never git init your repo</h2></a>
 						</header>
 						<h3>
 							The first commit of a repository can not be rebased like regular commits, so it’s good practice to create an empty commit as your repository root. So you should run <code>git commit -m “root” --allow-empty'</code> right after init your repository. This creates an empty root commit in one quick step. But that's hard to remember, right? Run this in your terminal<br />
