--- a/newbie-first-post.html
+++ b/newbie-first-post.html
@@ -40,6 +40,7 @@
 					<section id="one">
 						<header class="major">
 							<h2>Newbie First Post</h2>
+							<p>Published on October 28, 2016</p>
 						</header>
 						<h3>
 							Hello, this is my first blog post on Github Pages. Previously I've never written in a blog post and do not know Github provides features like this. but since I participated in the Besut Kode Universitas I broke the record for the first time do Pull Requests and use this Github Page.
