--- a/dont-git-init-your-repo.html
+++ b/dont-git-init-your-repo.html
@@ -40,6 +40,7 @@
 					<section id="two">
 						<header class="major">
 							<a href="dont-git-init-your-repo.html"><h2>Never git init your repo</h2></a>
+							<p>Published on November 4, 2016</p>
 						</header>
 						<h3>
 							The first commit of a repository can not be rebased like regular commits, so it’s good practice to create an empty commit as your repository root. So you should run <code>git commit -m “root” --allow-empty'</code> right after init your repository. This creates an empty root commit in one quick step. But that's hard to remember, right? Run this in your terminal<br />
