--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>San Sayidul Akdam Augusta</title>
+    <title>About Me</title>
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,700|Roboto:300,400,700|Noto+Serif:400" rel="stylesheet" type="text/css">
     <style>
         body {
@@ -336,21 +336,21 @@
                         <div class='skills'>
                             <div class='skill'><strong>Master</strong></div>
                             <p>
-                                HTML5, CSS3, Javascript, PHP, Laravel, C++, MySql
+                                Node, Angular, HTML5, CSS3, Javascript, PHP, Laravel, C++, MySql, Express, Git
                             </p>
                         </div>
 
                         <div class='skills'>
                             <div class='skill'><strong>Advanced</strong></div>
                             <p>
-                                Ruby, NodeJS, OpenCV, Matlab, Rails, ExpressJS, Git
+                                Ruby, OpenCV, Matlab, Rails, Python, Go, Echo, React, Java
                             </p>
                         </div>
 
                         <div class='skills'>
                             <div class='skill'><strong>Intermediate</strong></div>
                             <p>
-                                Java, Python, Go, Echo, C#, ReactJS, PosgreSql, MongoDB, System Administration
+                                C#, PosgreSql, MongoDB, System Administration
                             </p>
                         </div>
 
@@ -434,7 +434,7 @@
                         <div class='employment-info'>
                             <div class='title'>
                                 <a href=''>
-                                    <strong>Backend Developer </strong>at Gumcode
+                                    <strong>Web Developer </strong>at Gumcode
                                 </a>
                             </div>
                             <a class='content' href='https://gumcode.net/'>https://gumcode.net/</a>
@@ -445,10 +445,37 @@
                         <div class='info'>
                             <ul class="list">
                                 <li>
-                                    Develop several backend web apps & 3rd party API integration
+                                    Develop several web apps & 3rd party API integration
                                 </li>
                                 <li>
-                                    Collaboration with other developer using Git
+                                    Use several framework backend or frontend for development
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class='employment'>
+                        <div class='employment-info'>
+                            <div class='title'>
+                                <a href=''>
+                                    <strong>Software Engineer </strong>at Biji Inovasi
+                                </a>
+                            </div>
+                            <a class='content' href='https://bijii.co/'>https://bijii.co/</a>
+                            <div class='duration'>
+                                <p>Oktober 2017 - Present</p>
+                            </div>
+                        </div>
+                        <div class='info'>
+                            <ul class="list">
+                                <li>
+                                    Develop several web apps & 3rd party API integration
+                                </li>
+                                <li>
+                                    Develop several desktop apps integrated with deep learning
+                                </li>
+                                <li>
+                                    Use several framework backend or frontend for development
                                 </li>
                             </ul>
                         </div>
