--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@
             <section class='card'>
                 <div class='section-header'>Summary</div>
                 <div class='section-content' id='summary'>
-                    Hello world my name san, I am a programmer who previously a designer. I loved programming since 2014 especially with latest technology. I loved both of Backend and Frontend Development. Now I am one of a programmer of robotics research lab at Brawijaya
-                    University, which is preparing in the event KRI (Kontes Robot Indonesia). Recently, I'm interested in Machine Learning or Artificial Intelligence, I thought both of them is very cool and will be the future of technology.
+                    Hello world my name san, I am a programmer who previously a designer. I loved programming since 2014 especially with latest technology. I loved both of Backend and Frontend Development. Recently, I'm interested in Machine Learning or Artificial Intelligence,
+                    I thought both of them is very cool and will be the future of technology.
                 </div>
             </section>
             <section class='card'>
