--- a/index.html
+++ b/index.html
@@ -430,16 +430,68 @@
             <section class='card'>
                 <div class='section-header'>Work Experience</div>
                 <div class='section-content' id='employment'>
+
                     <div class='employment'>
                         <div class='employment-info'>
                             <div class='title'>
                                 <a href=''>
-                                    <strong>Web Developer </strong>at Gumcode
+                                    <strong>Remote Full Stack Developer </strong>at Cakrawala Borneo Sinergi
+                                </a>
+                            </div>
+                            <a class='content' href='https://borneotrip.id'>https://borneotrip.id/</a>
+                            <div class='duration'>
+                                <p>Januari 2019 - Present</p>
+                            </div>
+                        </div>
+                        <div class='info'>
+                            <ul class="list">
+                                <li>
+                                    Develop frontend dashboard using Angular
+                                </li>
+                                <li>
+                                    Develop API backend using Node and Express
+                                </li>
+                                <li>
+                                    Use MongoDB for web apps
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class='employment'>
+                        <div class='employment-info'>
+                            <div class='title'>
+                                <a href=''>
+                                    <strong>Full Stack Developer </strong>at Metrasat
+                                </a>
+                            </div>
+                            <a class='content' href='https://metrasat.co.id/'>https://metrasat.co.id/</a>
+                            <div class='duration'>
+                                <p>February 2019 - Present</p>
+                            </div>
+                        </div>
+                        <div class='info'>
+                            <ul class="list">
+                                <li>
+                                    Develop several internal web apps 
+                                </li>
+                                <li>
+                                    Develop product web apps integration with several module IOT System
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class='employment'>
+                        <div class='employment-info'>
+                            <div class='title'>
+                                <a href=''>
+                                    <strong>Full Stack Developer </strong>at Gumcode
                                 </a>
                             </div>
                             <a class='content' href='https://gumcode.net/'>https://gumcode.net/</a>
                             <div class='duration'>
-                                <p>February 2017 - Present</p>
+                                <p>February 2017 - February 2019</p>
                             </div>
                         </div>
                         <div class='info'>
