--- a/index.html
+++ b/index.html
@@ -435,12 +435,35 @@
                         <div class='employment-info'>
                             <div class='title'>
                                 <a href=''>
+                                    <strong>Full Stack Developer </strong>at PT. Bahtera Wahyu Sentosa
+                                </a>
+                            </div>
+                            <div class='duration'>
+                                <p>Juni 2019 - Present</p>
+                            </div>
+                        </div>
+                        <div class='info'>
+                            <ul class="list">
+                                <li>
+                                    Develop several web apps & 3rd party API integration
+                                </li>
+                                <li>
+                                    Use several framework backend or frontend for development
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class='employment'>
+                        <div class='employment-info'>
+                            <div class='title'>
+                                <a href=''>
                                     <strong>Remote Full Stack Developer </strong>at Cakrawala Borneo Sinergi
                                 </a>
                             </div>
                             <a class='content' href='https://borneotrip.id'>https://borneotrip.id/</a>
                             <div class='duration'>
-                                <p>Januari 2019 - Present</p>
+                                <p>Januari 2019 - Maret 2019</p>
                             </div>
                         </div>
                         <div class='info'>
@@ -467,7 +490,7 @@
                             </div>
                             <a class='content' href='https://metrasat.co.id/'>https://metrasat.co.id/</a>
                             <div class='duration'>
-                                <p>February 2019 - Present</p>
+                                <p>February 2019 - Maret 2019</p>
                             </div>
                         </div>
                         <div class='info'>
