add banyak data

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                         <div class='skills'>
                             <div class='skill'><strong>Master</strong></div>
                             <p>
-                                Node, Angular, HTML5, CSS3, Javascript, PHP, Laravel, C++, MySql, Express, Git
+                                NodeJS, AngularJS, VueJS, HTML5, CSS3, Javascript, PHP, Laravel, C++, MySql, MongoDB, Express, Git
                             </p>
                         </div>
 
@@ -350,7 +350,7 @@
                         <div class='skills'>
                             <div class='skill'><strong>Intermediate</strong></div>
                             <p>
-                                C#, PosgreSql, MongoDB, System Administration
+                                C#, PosgreSql, System Administration
                             </p>
                         </div>
 
