add banyak data

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                         <div class='skills'>
                             <div class='skill'><strong>Master</strong></div>
                             <p>
-                                NodeJS, AngularJS, VueJS, HTML5, CSS3, Javascript, PHP, Laravel, C++, MySql, MongoDB, Express, Git
+                                NodeJS, AngularJS, VueJS, HTML5, CSS3, Javascript, PHP, Laravel, C++, MySql, MongoDB, ExpressJS, Git
                             </p>
                         </div>
 
@@ -469,10 +469,10 @@
                         <div class='info'>
                             <ul class="list">
                                 <li>
-                                    Develop frontend dashboard using Angular
+                                    Develop frontend dashboard using AngularJS
                                 </li>
                                 <li>
-                                    Develop API backend using Node and Express
+                                    Develop API backend using NodeJS and ExpressJS
                                 </li>
                                 <li>
                                     Use MongoDB for web apps
