--- a/index.html
+++ b/index.html
@@ -437,11 +437,11 @@
           <div class="employment">
             <div class="employment-info">
               <div class="title">
-                <a href="https://www.misteraladin.com/" target="_blank">
-                  <strong>Backend Engineer </strong>at PT. MNC Aladin Indonesia (Travel and E-Commerce App)
+                <a href="https://aladinmall.id/" target="_blank">
+                  <strong>Lead Backend Engineer </strong>at PT. MNC Aladin Indonesia (E-Commerce App)
                 </a>
               </div>
-              <a class="content" href="https://www.misteraladin.com/" target="_blank">https://www.misteraladin.com/</a>
+              <a class="content" href="https://aladinmall.id/" target="_blank">https://aladinmall.id/</a>
               <div class="duration">
                 <p>March 2022 - Present</p>
               </div>
@@ -449,7 +449,10 @@
             <div class="info">
               <ul class="list">
                 <li>
-                  Create Seller Center Web Dashboard using ReactJS for Aladin Mall
+                  Manage team and support issues in productions
+                </li>
+                <li>
+                  Create Seller Center Web Dashboard using ReactJS
                 </li>
                 <li>
                   Develop GraphQL API using AWS Amplify 
@@ -461,10 +464,10 @@
                   Develop Widget App using Vue 3 supports Google Ads Manager 
                 </li>
                 <li>
-                  Integrated with 3rd party API (Alfacart)
+                  Integrated with 3rd party API (Alfacart, 3PL and some Payment Aggregator)
                 </li>
                 <li>
-                  Using DynamoDB for Database
+                  Using DynamoDB, PosgreSql for Database
                 </li>
               </ul>
             </div>
