--- a/index.html
+++ b/index.html
@@ -452,6 +452,9 @@
                   Manage team and support issues in productions
                 </li>
                 <li>
+                  Implement Microservices with Go Language
+                </li>
+                <li>
                   Create Seller Center Web Dashboard using ReactJS
                 </li>
                 <li>
@@ -676,7 +679,7 @@
             </div>
             <div class="info">
               <ul class="list">
-                <li>Develope soccer robot framework using C++</li>
+                <li>Develop soccer robot framework using C++</li>
                 <li>Computer vision research in robot soccer</li>
                 <li>Robot Soccer Trainer</li>
               </ul>
