--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
             <div class="employment-info">
               <div class="title">
                 <a href="https://gumcode.net/" target="_blank">
-                  <strong>Full Stack Developer </strong>at Gumcode (Software House)
+                  <strong>Full Stack Developer </strong>at Gumcode (IT Consultant)
                 </a>
               </div>
               <a class="content" href="https://gumcode.net/" target="_blank">https://gumcode.net/</a>
