--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
             <div class="employment-info">
               <div class="title">
                 <a href="https://bijii.co/">
-                  <strong>Software Engineer </strong>at Biji Inovasi (Software House)
+                  <strong>Software Engineer </strong>at Biji Inovasi (IT Consultant)
                 </a>
               </div>
               <a class="content" href="https://bijii.co/" target="_blank">https://bijii.co/</a>
