--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
               Github: <a href="https://github.com/sanakdam">sanakdam</a>
             </div>
 
-            <div class="phone-number last">
+<!--             <div class="phone-number last">
               <a href="tel:082331531837">082331531837</a>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
