--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>About Me (San Sayidul Akdam Augusta)</title>
+  <link rel="shortcut icon" href="icon.jpg">
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,700|Roboto:300,400,700|Noto+Serif:400"
     rel="stylesheet" type="text/css">
   <style>
